--- a/app/base.css
+++ b/app/base.css
@@ -1,18 +1,35 @@
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: system-ui;
   background-color: aliceblue;
   margin: 1%;
 }
 
 
 .toggle-ovens-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #44aedf;
+  border-bottom: 2px solid rgb(66, 66, 66)128, 128, 128);
   display: flex;
   justify-content: center;
+  margin-bottom: 5px;
+}
+
+
+.ovens-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: space-evenly;
+  align-content: stretch;
 }
 
 
 .oven {
-  padding: 5px;
+  width: 300px;
+  padding: 16px;
   background-color: lavender;
   border: 2px solid rgb(207, 207, 236);
   border-radius: 15px;
@@ -20,12 +37,47 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 0px 50px;
+  align-items: center;
 }
 
 
 .oven-info-input {
   display: flex;
+  width: 300px;
   flex-direction: column;
+  align-items: stretch;
+}
+
+
+.input-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+
+
+.oven-info-input input {
+  width: 100px;
+  cursor: default;
+  align-self: flex-end;
+}
+
+
+.submit-info {
+  background: rgb(195, 247, 238);
+  border: 2px solid green;
+  border-radius: 20px;
+  margin-top: 5px;
+  cursor: pointer;
+  color: darkgreen;
+  font-size: 1.125rem;
+  font-weight: 700;
+  padding: .875rem 1.125rem;
+}
+
+.submit-info:hover {
+  background: rgb(92, 209, 190);
 }
 
 
@@ -35,189 +87,87 @@ body {
   align-items: center;
 }
 
+.oven-name {
+  font-weight: bold;
+  align-self: center;
+  font-size: large;
+  margin: 2px;
+}
 
+
+.oven-info-display p {
+  margin: 3px;
+}
+
+.input-label {
+  margin: 5px;
+}
+
+/* Oven grid and containing elements */
 .oven-body {
-  width: 175px;
-  display: flex;
+  align-self: center;
   flex-direction: column;
+  display: flex;
+}
+
+
+.oven-row {
+  display: flex;
+}
+
+
+.oven-cell {
+  border: 1px solid black;
+  padding: 0;
+  display: flex;
+
 }
 
 
 /* Toggle Oven Button */
 .toggle-oven {
   /* appearance: button; */
-  background-color: #1899D6;
-  border: solid transparent;
-  border-radius: 16px;
-  border-width: 0 0 4px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: inline-flex;
   cursor: pointer;
-  font-size: 15px;
-  font-weight: 700;
-  letter-spacing: .8px;
-  line-height: 20px;
-  margin: 5px;
-  outline: none;
-  overflow: visible;
-  padding: 13px 16px;
-  text-align: center;
-  touch-action: manipulation;
-  transform: translateZ(0);
-  transition: filter .2s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
+  background-color: #1899D6;
+  color: white;
+  padding: 10px;
+  font-weight: 800;
 }
 
-.toggle-oven:after {
-  background-clip: padding-box;
-  background-color: #1CB0F6;
-  border: solid transparent;
-  border-radius: 16px;
-  border-width: 0 0 4px;
-  bottom: -4px;
-  content: "";
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: -1;
+
+.toggle-oven:hover {
+  background-color: #0d79ac;
 }
 
-.toggle-oven:main,
-.toggle-oven:focus {
-  user-select: auto;
-}
-
-.toggle-oven:hover:not(:disabled) {
-  filter: brightness(1.1);
-  -webkit-filter: brightness(1.1);
-}
-
-.toggle-oven:disabled {
-  cursor: auto;
-}
-
-.toggle-oven:active {
-  border-width: 4px 0 0;
-  background: none;
-}
 
 
 /* Timer in slot button */
 .timer-btn {
-  background: #fff;
-  backface-visibility: hidden;
-  border-radius: .375rem;
-  border-style: solid;
-  border-width: .125rem;
-  box-sizing: border-box;
-  color: #212121;
+  background: rgb(195, 227, 247);
+  width: 100px;
+  border: none;
+  border-right: 1px solid #1899D6;
   cursor: pointer;
-  display: inline-block;
-  font-family: Circular,Helvetica,sans-serif;
   font-size: 1.125rem;
   font-weight: 700;
-  letter-spacing: -.01em;
-  line-height: 1.3;
   padding: .875rem 1.125rem;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transform: translateZ(0) scale(1);
-  transition: transform .2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
 }
 
 .timer-btn:not(:disabled):hover {
-  transform: scale(1.05);
+  background-color: rgb(160, 204, 231);
 }
 
-.timer-btn:not(:disabled):hover:active {
-  transform: scale(1.05) translateY(.125rem);
-}
 
-.timer-btn:focus {
-  outline: 0 solid transparent;
-}
-
-.timer-btn:focus:before {
-  content: "";
-  left: calc(-1*.375rem);
-  pointer-events: none;
-  position: absolute;
-  top: calc(-1*.375rem);
-  transition: border-radius;
-  user-select: none;
-}
-
-.timer-btn:focus:not(:focus-visible) {
-  outline: 0 solid transparent;
-}
-
-.timer-btn:focus:not(:focus-visible):before {
-  border-width: 0;
-}
-
-.timer-btn:not(:disabled):active {
-  transform: translateY(.125rem);
-}
-
-/* CSS */
 .reset-btn {
   align-items: center;
   background-color: #FFE7E7;
-  background-position: 0 0;
-  border: 1px solid #FEE0E0;
-  border-radius: 11px;
-  box-sizing: border-box;
+  border: none;
   color: #D33A2C;
   cursor: pointer;
-  display: flex;
-  font-size: 1rem;
   font-weight: 700;
-  line-height: 33.4929px;
-  list-style: outside url(https://www.smashingmagazine.com/images/bullet.svg) none;
-  padding: 2px 12px;
-  text-align: left;
-  text-decoration: none;
-  text-shadow: none;
-  text-underline-offset: 1px;
-  transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  word-break: break-word;
-}
-
-.reset-btn:active,
-.reset-btn:hover,
-.reset-btn:focus {
-  outline: 0;
-}
-
-
-.reset-btn:active {
-  background-color: #D33A2C;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
-  color: #FFFFFF;
 }
 
 .reset-btn:hover {
-  background-color: #FFE3E3;
+  background-color: #f3a9a9;
   border-color: #FAA4A4;
-}
-
-.reset-btn:active:hover,
-.reset-btn:focus:hover,
-.reset-btn:focus {
-  background-color: #D33A2C;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
-  color: #FFFFFF;
 }
