--- a/app/base.css
+++ b/app/base.css
@@ -1,7 +1,7 @@
 body {
   font-family: system-ui;
   background-color: aliceblue;
-  margin: 1%;
+  margin: 0px;
 }
 
 
@@ -10,20 +10,22 @@ body {
   top: 0;
   width: 100%;
   background-color: #44aedf;
-  border-bottom: 2px solid rgb(66, 66, 66)128, 128, 128);
-  display: flex;
+  border-bottom: 2px solid rgb(231, 231, 231);
+  display: inline-flex;
   justify-content: center;
   margin-bottom: 5px;
+  z-index: 1;
 }
 
 
 .ovens-container {
+  z-index: 2;
+  margin-top: 50px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  align-items: baseline;
   justify-content: space-evenly;
-  align-content: stretch;
+  align-content: center;
 }
 
 
