--- a/app/base.css
+++ b/app/base.css
@@ -38,7 +38,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0px 50px;
+  margin: 5px 50px;
   align-items: center;
 }
 
@@ -87,6 +87,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-weight: bold;
+  color:rgb(21, 57, 68);
 }
 
 .oven-name {
@@ -119,10 +121,9 @@ body {
 
 
 .oven-cell {
-  border: 1px solid black;
+  border: 1px solid rgb(89, 186, 216);
   padding: 0;
   display: flex;
-
 }
 
 
@@ -152,6 +153,7 @@ body {
   cursor: pointer;
   font-size: 1.125rem;
   font-weight: 700;
+  color: rgb(70, 143, 165);
   padding: .875rem 1.125rem;
 }
 
